--- a/src/Body.css
+++ b/src/Body.css
@@ -1,6 +1,6 @@
 .body {
   flex: 0.9;
-  height: 100vh;
+  height: 84vh;
   color: white;
   padding: 30px;
   overflow-y: overlay;
@@ -14,12 +14,12 @@
 .body__info {
   display: flex;
   align-items: flex-end;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .body__info > img {
-  height: 20vw;
-  margin: 0 20px;
+  height: 12vw;
+  margin: 0 15px 0 0;
   box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
 }
 
@@ -45,11 +45,22 @@
   margin-right: 20px;
 }
 
+.white-background {
+  height: 40px;
+  width: 40px;
+  background-color: white;
+  /* margin-left: 35px; */
+  /* margin-top: 20px; */
+  /* margin-bottom: 20px; */
+  margin: 20px 40px 20px 40px;
+}
+
 .body__play {
-  font-size: 80px !important;
-  margin-left: 50px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  font-size: 70px !important;
+  margin-left: -15px;
+  margin-top: -15px;
+  /* margin-bottom: 20px; */
+  color: #1db954;
 }
 
 .body__play:hover {
@@ -57,8 +68,41 @@
   transform: scale(1.08);
 }
 
+.body__rowTitles {
+  display: flex;
+  margin-left: 125px;
+  margin-bottom: 5px;
+  color: gray;
+  padding-right: 15px;
+}
+
+.body__rowName {
+  flex: 0.45;
+  /* margin-right: 45px; */
+}
+
+.body__rowAlbum {
+  flex: 0.5;
+}
+
+.body__rowLength {
+  flex: 0.05;
+}
+
+.hr {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.body__rowHr {
+  width: 97%;
+  border: 1px solid rgba(128, 128, 128, 0.2);
+}
+
 .body__songs {
   margin: 20px -30px;
   width: 100%;
-  height: 400px;
+  /* height: 100px; */
+  background-color: rgba(0, 0, 0, 0.1);
 }
