--- a/src/SongRow.css
+++ b/src/SongRow.css
@@ -1,5 +1,5 @@
 .songRow {
-  margin-left: 50px;
+  margin-left: 45px;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -10,6 +10,11 @@
   cursor: pointer;
   background-color: black;
   opacity: 0.8;
+}
+
+.songRow__number {
+  color: gray;
+  margin-right: 20px;
 }
 
 .songRow__info {
