--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,6 +1,8 @@
 .footer {
   position: fixed;
   bottom: 0;
+  right: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   height: 55px;
@@ -10,7 +12,7 @@
 }
 
 .footer__right * .MuiSlider-root {
-  color: green;
+  color: #1ed15e;
 }
 
 .footer__left {
@@ -42,12 +44,36 @@
 
 .footer__center {
   flex: 0.6;
+  display: grid;
+  justify-content: center;
+}
+
+.center__top {
   padding: 0 100px;
   color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 300px;
+  max-width: 350px;
+}
+
+.center__top > * {
+  padding: 0 20px;
+}
+
+.center__bottom > .MuiSlider-root {
+  color: gray;
+}
+
+.center__bottom {
+  display: flex;
+  align-items: center;
+}
+
+.center__bottom > * {
+  padding: 0 20px;
+  color: gray;
+  font-size: 13px;
 }
 
 .footer__icon:hover,
@@ -57,13 +83,64 @@
 }
 
 .footer__right {
-  flex: 0.2;
+  flex: 0.16;
   display: flex;
   align-items: center;
   justify-content: space-between;
   color: white;
+  margin-right: 2%;
 }
 
 #pause {
   display: none;
+}
+
+#bottom__slider {
+  width: 100%;
+  background-color: gray;
+  border-radius: 5px;
+  padding: 0;
+}
+
+#bar {
+  width: 0%;
+  height: 5px;
+  background-color: #1ed15e;
+  border-radius: 5px;
+}
+
+#volumeUp,
+#volumeMute {
+  display: none;
+}
+
+#tooltip {
+  position: relative;
+  /* display: none; */
+}
+
+#tooltipText {
+  display: block;
+  width: 120px;
+  background-color: #555;
+  color: white;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  bottom: 0%;
+  margin-bottom: 5px;
+  z-index: 1;
+  opacity: 0;
+  /* transition: opacity 0.5s ease; */
+}
+
+#tooltip #tooltipText::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 10%;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
 }
