--- a/src/Login.css
+++ b/src/Login.css
@@ -1,19 +1,199 @@
 .login {
-  display: grid;
-  place-items: center;
-  height: 100vh;
-  background-color: black;
+  /* display: grid; */
+  /* place-items: center; */
+  /* display: flex; */
+  /* height: 100vh; */
+  /* background-color: rgba(0, 128, 0, 1); */
+  background-image: url("./images/background.jpg");
+  /* background-image: linear-gradient(#1ed15e, #0d5f2a); */
 }
 
-.login > img {
+.tint {
+  background-image: linear-gradient(to bottom right, #1ed15de1, #000000e1);
+  z-index: 1;
+  /* margin-top: 125px; */
+  height: 100vh;
   width: 100%;
 }
 
-.login > a {
-  padding: 20px;
-  background-color: #1db964;
-  border-radius: 99px;
-  font-weight: 800;
+.login__header {
+  display: flex;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  justify-content: space-between;
+  background-color: black;
+  z-index: 2;
+}
+
+.login__header > img {
+  width: 150px;
+}
+
+.header__right {
+  margin-right: 20px;
+}
+
+.tooltip > a {
+  padding: 5px;
+  /* background-color: #1db964; */
+  /* border-radius: 99px; */
+  font-weight: 500;
   color: white;
   text-decoration: none;
+}
+
+.tooltip {
+  position: relative;
+  /* display: none; */
+}
+
+.tooltipText {
+  /* display: block; */
+  min-width: 300px;
+  height: fit-content;
+  background-color: #555;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  border-radius: 6px;
+  position: absolute;
+  top: 150%;
+  left: 0%;
+  margin-left: -300px;
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease;
+}
+
+.tooltip .tooltipText::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  margin-top: -10px;
+  right: 6%;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent #555 transparent;
+}
+
+.tooltip:hover .tooltipText {
+  opacity: 1;
+  visibility: visible;
+}
+
+.credentials {
+  display: flex;
+  padding: 15px;
+  text-align: left;
+}
+
+.values {
+  padding-left: 20px;
+}
+
+.login__body {
+  width: 100%;
+  height: 100%;
+}
+
+.slideshow {
+  /* display: flex;
+  justify-content: space-between;
+  color: white; */
+
+  /* max-width: 1000px;
+  height: 500px;
+  position: relative;
+  margin: auto; */
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -500px;
+  margin-top: -250px;
+  max-width: 1000px;
+  max-height: 500px;
+  height: 100%;
+  width: 100%;
+}
+
+.carousel {
+  height: 100%;
+  width: 100%;
+}
+
+.slider {
+  height: 100%;
+}
+
+.btn {
+  position: absolute;
+  top: 50%;
+  color: white;
+  background: none;
+  outline: none;
+  border: none;
+  font-size: 25px;
+  transition: all 0.5 ease;
+}
+
+.btn:hover {
+  transform: scale(1.2);
+}
+
+.btn-back {
+  left: 0%;
+}
+
+.btn-next {
+  right: 0%;
+}
+
+.slide {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 10%;
+  align-items: center;
+}
+
+.title {
+  /* position: absolute; */
+  /* width: 100%; */
+  /* top: 10%; */
+  margin-bottom: 30px;
+  font-size: 400%;
+}
+
+.title,
+.info {
+  text-align: center;
+  color: white;
+}
+
+.img-slider {
+  width: 200px;
+}
+
+.dots {
+  text-align: center;
+}
+
+.dot___3c3SI {
+  border-width: 0;
+  margin: 2px;
+  /*border-style: outset;
+  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+  border-image: initial; */
+  /* box-sizing: unset; */
+  height: 5px;
+  border-radius: 5px;
+  background-color: rgba(16, 16, 16, 0.5);
+}
+
+.carousel__dot--selected {
+  background-color: white;
 }
