--- a/src/Body.css
+++ b/src/Body.css
@@ -1,6 +1,6 @@
 .body {
   flex: 0.9;
-  height: 84vh;
+  height: 100vh;
   color: white;
   padding: 30px;
   overflow-y: overlay;
@@ -80,7 +80,6 @@
 
 .body__rowName {
   flex: 0.485;
-  /* margin-right: 45px; */
 }
 
 .body__rowAlbum {
@@ -103,8 +102,96 @@
 }
 
 .body__songs {
-  margin: 20px -30px;
+  margin: 20px 0px;
+  padding-bottom: 60px;
   width: 100%;
-  /* height: 100px; */
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (max-width: 1374px) {
+  .body__infoText > h2 {
+    font-size: 60px;
+  }
+
+  .body__number {
+    flex: 0.05;
+  }
+
+  .body__rowName {
+    flex: 0.6;
+  }
+}
+
+@media only screen and (max-width: 974px) {
+  .body__infoText > h2 {
+    font-size: 40px;
+  }
+
+  .body__rowName {
+    flex: 0.65;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .body__infoText > strong {
+    font-size: 12px;
+  }
+
+  .body__infoText > p {
+    font-size: 12px;
+  }
+
+  .body__number {
+    flex: 0.1;
+  }
+
+  .body__rowName {
+    flex: 0.7;
+  }
+
+  .white-background {
+    height: 24px;
+    width: 24px;
+  }
+
+  .body__play {
+    font-size: 50px !important;
+    margin-left: -15px;
+    margin-top: -15px;
+  }
+
+  .body__rowTitles {
+    margin-left: 25px;
+  }
+
+  .body__rowTitles > * {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .body {
+    flex: 1;
+    padding: 20px;
+  }
+
+  .body__infoText > strong {
+    font-size: 12px;
+  }
+
+  .body__infoText > h2 {
+    font-size: 24px;
+  }
+
+  .body__info > img {
+    height: 30vw;
+  }
+
+  .body__rowAlbum {
+    display: none;
+  }
+
+  .body__rowName {
+    flex: 1;
+  }
 }
