--- a/src/Header.css
+++ b/src/Header.css
@@ -6,7 +6,7 @@
 
 .header__left {
   flex: 0.5;
-  min-width: 70px;
+  min-width: 300px;
   background-color: white;
   color: grey;
   border-radius: 30px;
@@ -31,4 +31,39 @@ input:focus {
 
 .header__right > h4 {
   margin-left: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+  .header__left {
+    min-width: 200px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .header {
+    margin-bottom: 0;
+  }
+
+  .header__right {
+    display: grid;
+    justify-items: center;
+    margin: 0;
+  }
+
+  .header__right > h4 {
+    font-size: 14px;
+    margin-left: 0;
+    margin-top: 2px;
+  }
+
+  .header__left {
+    min-width: 60%;
+    height: 20px;
+    margin-left: 40px;
+  }
+
+  .header__left > input {
+    border: none;
+    width: 100%;
+  }
 }
