--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -5,9 +5,24 @@
   padding-left: 10px;
   padding-right: 10px;
   min-width: 230px;
-  height: 100vh;
   background-color: black;
 }
+
+.main {
+  height: 100vh;
+  flex: 0.1;
+  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  min-width: 230px;
+  background-color: black;
+}
+
+/* .hambuger {
+  position: absolute;
+  left: 5%;
+  top: 5%;
+} */
 
 .sidebar__logo {
   height: 70px;
@@ -19,4 +34,98 @@
   margin-left: 10px;
   padding: 5px;
   font-size: 12px;
+}
+
+.bm-burger-button {
+  position: fixed;
+  width: 25px;
+  height: 20px;
+  left: 15px;
+  top: 30px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+  border-radius: 1px;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: green;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  left: 0 !important;
+  height: 100%;
+  width: fit-content !important;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding-top: 20px;
+  /* font-size: 1.15em; */
+  height: fit-content !important;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+@media only screen and (max-width: 1000px) {
+  .main,
+  .sidebar {
+    min-width: 150px;
+  }
+
+  .sidebar {
+    padding: 0;
+  }
+
+  .sidebar__logo {
+    height: 50px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .main,
+  .sidebar {
+    min-width: 0;
+    flex: 0;
+    padding: 0;
+  }
 }
