--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -82,7 +82,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   background: #373a47;
   padding-top: 20px;
   /* font-size: 1.15em; */
-  height: fit-content !important;
+  /* height: fit-content !important; */
 }
 
 /* Morph shape necessary with bubble or elastic */
