--- a/src/Body.css
+++ b/src/Body.css
@@ -104,6 +104,7 @@
 .body__songs {
   margin: 20px 0px;
   padding-bottom: 60px;
+  padding-top: 30px;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.1);
 }
