--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -79,7 +79,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
+  background: black;
   padding-top: 20px;
   /* font-size: 1.15em; */
   /* height: fit-content !important; */
