--- a/src/SidebarOption.css
+++ b/src/SidebarOption.css
@@ -27,3 +27,9 @@
   margin-left: 20px;
   font-size: 14px;
 }
+
+@media only screen and (max-width: 480px) {
+  .sidebarOption > p {
+    margin-left: 5px;
+  }
+}
